--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
         </div>
         <nav>
             <ul>
-                <a href="">Перекладачка</a>
-                <a href="">ПІ-22-1-ict</a>
-                <a href="">КІ-21-1фмб</a>
+                <a href="perekladachka.html">Перекладачка</a>
+                <a href="index.html">ПІ-22-1-ict</a>
+                <a href="ki-21-1fmb.html">КІ-21-1фмб</a>
             </ul>
         </nav>
     </header>
@@ -80,7 +80,7 @@
                 <tr>
                   <td>2</td>
                   <td>10:00-11:20</td>
-                  <td>Архітектура комп(практ)</td>
+                  <td>Архітектура комп'ютерів (практ)</td>
                   <td><a href="https://us04web.zoom.us/j/8246476831?pwd=UHJUU3ZDU1lhNmhSRjN2dFJjU3dYUT09"target="_blank">Натисніть</a></td>
                 </tr>
                 <tr>
@@ -174,7 +174,7 @@
                 <tr>
                   <td>4</td>
                   <td>13:10-14:30</td>
-                  <td>Операційні системи(лекція)</td>
+                  <td>Операційні системи (лекція)</td>
                   <td><a href="">Натисніть???</a></td>
                 </tr> 
                 <tr>
@@ -201,13 +201,13 @@
                 <tr>
                   <td>1</td>
                   <td>08:30-09:50</td>
-                  <td>Бази даних(лекція)</td>
+                  <td>Бази даних (лекція)</td>
                   <td><a href="https://us04web.zoom.us/j/71522784486?pwd=kQjPqW50YzQYTzBP16mAhVYqW1MvsH.1" target="_blank">Натисніть</a></td>
                 </tr> 
                 <tr>
                   <td>2</td>
                   <td>10:00-11:20</td>
-                  <td>Web-програмування(лекція) </td>
+                  <td>Web-програмування (лекція) </td>
                   <td><a href="https://us05web.zoom.us/j/82300837007?pwd=d04tZx1cMCFqI6b9C81tVcaxlTpfkH.1" target="_blank">Натисніть</a></td>
                 </tr>
                 <tr>
