--- a/perekladachka.html
+++ b/perekladachka.html
@@ -21,13 +21,13 @@
     </header>
     <div class="rozklad">
         <table>
-            <caption>Розклад занять для перекладачки</caption>
+            <h3>Понеділок</h3>
             <thead>
               <tr>
                 <th>№</th>
                 <th>Час</th>
                 <th>Групи</th>
-                <th>Понеділок</th>
+                <th>Дисципліна</th>
                 <th>Zoom</th>
               </tr>
             </thead>
@@ -76,12 +76,13 @@
             </table>
             <!-------------------------------------->
             <table>
+              <h3>Вівторок</h3>
                 <thead>
                   <tr>
                     <th>№</th>
                     <th>Час</th>
                     <th>Групи</th>
-                    <th>Вівторок</th>
+                    <th>Дисципліна</th>
                     <th>Zoom</th>
                   </tr>
                 </thead>
@@ -130,12 +131,13 @@
                 </table>
                 <!-------------------------------------->
             <table>
+              <h3>Середа</h3>
                 <thead>
                   <tr>
                     <th>№</th>
                     <th>Час</th>
                     <th>Групи</th>
-                    <th>Середа</th>
+                    <th>Дисципліна</th>
                     <th>Zoom</th>
                   </tr>
                 </thead>
@@ -184,12 +186,13 @@
                 </table>
                 <!-------------------------------------->
             <table>
+              <h3>Четвер</h3>
                 <thead>
                   <tr>
                     <th>№</th>
                     <th>Час</th>
                     <th>Групи</th>
-                    <th>Четвер</th>
+                    <th>Дисципліна</th>
                     <th>Zoom</th>
                   </tr>
                 </thead>
@@ -238,19 +241,20 @@
                 </table>
                 <!-------------------------------------->
             <table>
+              <h3>П'ятниця</h3>
                 <thead>
                   <tr>
                     <th>№</th>
                     <th>Час</th>
                     <th>Групи</th>
-                    <th>П'ятниця</th>
+                    <th>Дисципліна</th>
                     <th>Zoom</th>
                   </tr>
                 </thead>
                 <tr>
                   <td rowspan="2">1</td>
                   <td>08:30-09:50</td>
-                  <td>ПІ-Д,ПІ-К</td>
+                  <td>ПІ-Д,ПІ-К(?)</td>
                   <td>Бази даних (лекція)</td>
                   <td><a href="https://us04web.zoom.us/j/71522784486?pwd=kQjPqW50YzQYTzBP16mAhVYqW1MvsH.1" target="_blank">Натисніть</a></td>
                 </tr> 
@@ -263,7 +267,7 @@
                 <tr>
                   <td rowspan="2">2</td>
                   <td>10:00-11:20</td>
-                  <td>ПІ-Д,ПІ-К</td>
+                  <td>ПІ-Д,ПІ-К(?)</td>
                   <td>Web-програмування (лекція) </td>
                   <td><a href="https://us05web.zoom.us/j/82300837007?pwd=d04tZx1cMCFqI6b9C81tVcaxlTpfkH.1" target="_blank">Натисніть</a></td>
                 </tr>
@@ -305,3 +309,4 @@
     </div>
 </body>
 </html>
+
