--- a/perekladachka.html
+++ b/perekladachka.html
@@ -49,7 +49,7 @@
               <td>3</td>
               <td>11:40-13:00</td>
               <td>КІ, ПІ-К</td>
-              <td>Права людини та верховенство права в сучасних реаліях  </td>
+              <td>Права людини та верховенство права в сучасних реаліях (лекція) </td>
               <td><a href="https://us02web.zoom.us/j/81765572957?pwd=b0FSm6GyrI9kvRDa3wURWbGz2r6Rue.1" target="_blank">Натисніть</a></td>
             </tr> 
             <tr>
@@ -97,7 +97,7 @@
                   <td>2</td>
                   <td>10:00-11:20</td>
                   <td>ПІ-Д</td>
-                  <td>Архітектура комп'ютерів (практ)</td>
+                  <td>Архітектура комп'ютерів (практична)</td>
                   <td><a href="https://us04web.zoom.us/j/8246476831?pwd=UHJUU3ZDU1lhNmhSRjN2dFJjU3dYUT09"target="_blank">Натисніть</a></td>
                 </tr>
                 <tr>
