--- a/perekladachka.html
+++ b/perekladachka.html
@@ -35,21 +35,21 @@
               <td>1</td>
               <td>08:30-09:50</td>
               <td>ПІ-Д, ПІ-К(?)</td>
-              <td>Філософія (лекція) </td>
+              <td>Філософія_Лісовський Петро Миколайович (лекція) </td>
               <td><a href="https://us02web.zoom.us/j/89604024498?pwd=zdTtYUQcK9BMfbBclS2rKxhYqhlDcb.1" target="_blank">Натисніть</a></td>
             </tr> 
             <tr>
               <td>2</td>
               <td>10:00-11:20</td>
               <td></td>
-              <td>Вступна лекція</td>
-              <td><a href="https://us02web.zoom.us/j/86014773573?pwd=G5AqFK429iUuaTNJT3QyUdGT8O86NU.1" target="_blank">Натисніть</a></td>
+              <td></td>
+              <td></td>
             </tr>
             <tr>
               <td>3</td>
               <td>11:40-13:00</td>
               <td>КІ, ПІ-К</td>
-              <td>Права людини та верховенство права в сучасних реаліях (лекція) </td>
+              <td>Права людини та верховенство права в сучасних реаліях_Фаст Олексій Олександрович (лекція) </td>
               <td><a href="https://us02web.zoom.us/j/82271490163?pwd=558oNGRKuMBC6tsUAWSSko5PsjLf2k.1" target="_blank">Натисніть</a></td>
             </tr> 
             <tr>
@@ -97,7 +97,7 @@
                   <td>2</td>
                   <td>10:00-11:20</td>
                   <td>ПІ-Д</td>
-                  <td>Архітектура комп'ютерів (практична)</td>
+                  <td>Архітектура комп'ютерів_Зубко Роман Анатолійович (практична)</td>
                   <td><a href="https://us04web.zoom.us/j/8246476831?pwd=UHJUU3ZDU1lhNmhSRjN2dFJjU3dYUT09"target="_blank">Натисніть</a></td>
                 </tr>
                 <tr>
@@ -145,14 +145,14 @@
                   <td>1</td>
                   <td>08:30-09:50</td>
                   <td>ПІ-Д, ПІ-К(?)</td>
-                  <td>Філософія (лекція)</td>
+                  <td>Філософія_Лісовський Петро Миколайович (лекція)</td>
                   <td><a href="https://us02web.zoom.us/j/6968348272?pwd=cTJKMElWUXRtd0dkcUVPenIwTVc0dz09&omn=81411586208" target="_blank">Натисніть</a></td>
                 </tr> 
                 <tr>
                   <td>2</td>
                   <td>10:00-11:20</td>
                   <td>КІ, ПІ-К</td>
-                  <td>Архітектура комп’ютерів (практична)</td>
+                  <td>Архітектура комп’ютерів_Зубко Роман Анатолійович (практична)</td>
                   <td><a href="https://us04web.zoom.us/j/8246476831?pwd=UHJUU3ZDU1lhNmhSRjN2dFJjU3dYUT09"target="_blank">Натисніть</a></td>
                 </tr>
                 <tr>
@@ -173,7 +173,7 @@
                   <td>5</td>
                   <td>14:40-16:10</td>
                   <td>КІ, ПІ-К</td>
-                  <td>Операційні системи (лекція)</td>
+                  <td>Операційні системи_Зайцев Володимир Григорович (лекція)</td>
                   <td><a href="">Натисніть???</a></td>
                 </tr> 
                 <tr>
@@ -221,7 +221,7 @@
                   <td>4</td>
                   <td>13:10-14:30</td>
                   <td>ПІ-Д</td>
-                  <td>Операційні системи (лекція)</td>
+                  <td>Операційні системи_Зайцев Володимир Григорович (лекція)</td>
                   <td><a href="">Натисніть???</a></td>
                 </tr> 
                 <tr>
@@ -255,26 +255,26 @@
                   <td rowspan="2">1</td>
                   <td>08:30-09:50</td>
                   <td>ПІ-Д, ПІ-К(?)</td>
-                  <td>Бази даних (лекція)</td>
+                  <td>Бази даних_Міронов Юрій Глібович (лекція)</td>
                   <td><a href="https://us04web.zoom.us/j/71522784486?pwd=kQjPqW50YzQYTzBP16mAhVYqW1MvsH.1" target="_blank">Натисніть</a></td>
                 </tr> 
                 <tr>
                     <td>08:30-09:50</td>
                     <td>КІ</td>
-                    <td>Надійність, діагностика та експлуатація комп’ютерних систем </td>
+                    <td>Надійність, діагностика та експлуатація комп’ютерних систем_Савостін-Косяк Данило Олександрович </td>
                     <td><a href="https://us05web.zoom.us/j/8292861261?pwd=LzVHYkRiN1lwYWhnUENYSHFiSjMvQT09" target="_blank">Натисніть</a></td>
                   </tr> 
                 <tr>
                   <td rowspan="2">2</td>
                   <td>10:00-11:20</td>
                   <td>ПІ-Д, ПІ-К(?)</td>
-                  <td>Web-програмування (лекція) </td>
+                  <td>Web-програмування_Богун Роман Ігорович (лекція) </td>
                   <td><a href="https://us05web.zoom.us/j/82300837007?pwd=d04tZx1cMCFqI6b9C81tVcaxlTpfkH.1" target="_blank">Натисніть</a></td>
                 </tr>
                 <tr>
                     <td>10:00-11:20</td>
                     <td>КІ</td>
-                    <td>Бази даних (лекція) </td>
+                    <td>Бази даних_Міронов Юрій Глібович (лекція) </td>
                     <td><a href="https://us04web.zoom.us/j/71522784486?pwd=kQjPqW50YzQYTzBP16mAhVYqW1MvsH.1" target="_blank">Натисніть</a></td>
                   </tr>
                 <tr>
