--- a/perekladachka.html
+++ b/perekladachka.html
@@ -34,7 +34,7 @@
             <tr>
               <td>1</td>
               <td>08:30-09:50</td>
-              <td>ПІ-Д, ПІ-К(?)</td>
+              <td>ПІ-Д</td>
               <td>Філософія_ Лісовський Петро Миколайович (лекція) </td>
               <td><a href="https://us02web.zoom.us/j/89604024498?pwd=zdTtYUQcK9BMfbBclS2rKxhYqhlDcb.1" target="_blank">Натисніть</a></td>
             </tr> 
@@ -142,19 +142,25 @@
                   </tr>
                 </thead>
                 <tr>
-                  <td>1</td>
+                  <td rowspan="2">1</td>
                   <td>08:30-09:50</td>
-                  <td>ПІ-Д, ПІ-К(?)</td>
+                  <td>ПІ-Д</td>
                   <td>Філософія_ Лісовський Петро Миколайович (лекція)</td>
                   <td><a href="https://us02web.zoom.us/j/6968348272?pwd=cTJKMElWUXRtd0dkcUVPenIwTVc0dz09&omn=81411586208" target="_blank">Натисніть</a></td>
                 </tr> 
                 <tr>
-                  <td>2</td>
-                  <td>10:00-11:20</td>
+                  <td>08:30-09:50</td>
                   <td>ПІ-Д, КІ, ПІ-К</td>
                   <td>Архітектура комп’ютерів_  Зубко Роман Анатолійович (практична)</td>
                   <td><a href="https://us04web.zoom.us/j/8246476831?pwd=UHJUU3ZDU1lhNmhSRjN2dFJjU3dYUT09"target="_blank">Натисніть</a></td>
                 </tr>
+                <tr>
+                  <td>2</td>
+                  <td>10:00-11:20</td>
+                  <td></td>
+                  <td></td>
+                  <td></td>
+                </tr> 
                 <tr>
                   <td>3</td>
                   <td>11:40-13:00</td>
