--- a/ki-21-1fmb.html
+++ b/ki-21-1fmb.html
@@ -119,14 +119,14 @@
                 <tr>
                   <td>1</td>
                   <td>08:30-09:50</td>
-                  <td></td>
-                  <td></td>
+                  <td>Архітектура комп’ютерів (лекція)</td>
+                  <td><a href="https://us04web.zoom.us/j/8246476831?pwd=UHJUU3ZDU1lhNmhSRjN2dFJjU3dYUT09"target="_blank">Натисніть</a></td>
                 </tr> 
                 <tr>
                   <td>2</td>
                   <td>10:00-11:20</td>
-                  <td>Архітектура комп’ютерів (практична)</td>
-                  <td><a href="https://us04web.zoom.us/j/8246476831?pwd=UHJUU3ZDU1lhNmhSRjN2dFJjU3dYUT09"target="_blank">Натисніть</a></td>
+                  <td></td>
+                  <td></td>
                 </tr>
                 <tr>
                   <td>3</td>
