--- a/perekladachka.html
+++ b/perekladachka.html
@@ -150,8 +150,8 @@
                 </tr> 
                 <tr>
                   <td>08:30-09:50</td>
-                  <td>ПІ-Д, КІ, ПІ-К</td>
-                  <td>Архітектура комп’ютерів_  Зубко Роман Анатолійович (практична)</td>
+                  <td>КІ, ПІ-К</td>
+                  <td>Архітектура комп’ютерів_  Зубко Роман Анатолійович (лекція)</td>
                   <td><a href="https://us04web.zoom.us/j/8246476831?pwd=UHJUU3ZDU1lhNmhSRjN2dFJjU3dYUT09"target="_blank">Натисніть</a></td>
                 </tr>
                 <tr>
