--- a/perekladachka.html
+++ b/perekladachka.html
@@ -96,9 +96,9 @@
                 <tr>
                   <td>2</td>
                   <td>10:00-11:20</td>
-                  <td></td>
-                  <td></td>
-                  <td></td>
+                  <td>ПІ-Д</td>
+                  <td>Архітектура комп’ютерів_  Зубко Роман Анатолійович (лекція)</td>
+                  <td><a href="https://us04web.zoom.us/j/8246476831?pwd=UHJUU3ZDU1lhNmhSRjN2dFJjU3dYUT09"target="_blank">Натисніть</a></td>
                 </tr>
                 <tr>
                   <td>3</td>
