--- a/perekladachka.html
+++ b/perekladachka.html
@@ -97,7 +97,7 @@
                   <td>2</td>
                   <td>10:00-11:20</td>
                   <td>ПІ-Д</td>
-                  <td>Архітектура комп’ютерів_  Зубко Роман Анатолійович (лекція)</td>
+                  <td color="red">Архітектура комп’ютерів_  Зубко Роман Анатолійович (лекція)</td>
                   <td><a href="https://us04web.zoom.us/j/8246476831?pwd=UHJUU3ZDU1lhNmhSRjN2dFJjU3dYUT09"target="_blank">Натисніть</a></td>
                 </tr>
                 <tr>
@@ -143,13 +143,12 @@
                 </thead>
                 <tr>
                   <td rowspan="2">1</td>
-                  <td>08:30-09:50</td>
+                  <td rowspan="2">08:30-09:50</td>
                   <td>ПІ-Д</td>
                   <td>Філософія_ Лісовський Петро Миколайович (лекція)</td>
                   <td><a href="https://us02web.zoom.us/j/6968348272?pwd=cTJKMElWUXRtd0dkcUVPenIwTVc0dz09&omn=81411586208" target="_blank">Натисніть</a></td>
                 </tr> 
                 <tr>
-                  <td>08:30-09:50</td>
                   <td>КІ, ПІ-К</td>
                   <td>Архітектура комп’ютерів_  Зубко Роман Анатолійович (лекція)</td>
                   <td><a href="https://us04web.zoom.us/j/8246476831?pwd=UHJUU3ZDU1lhNmhSRjN2dFJjU3dYUT09"target="_blank">Натисніть</a></td>
@@ -259,26 +258,24 @@
                 </thead>
                 <tr>
                   <td rowspan="2">1</td>
-                  <td>08:30-09:50</td>
+                  <td rowspan="2">08:30-09:50</td>
                   <td>ПІ-Д, ПІ-К(?)</td>
                   <td>Бази даних_ Міронов Юрій Глібович (лекція)</td>
                   <td><a href="https://us04web.zoom.us/j/71522784486?pwd=kQjPqW50YzQYTzBP16mAhVYqW1MvsH.1" target="_blank">Натисніть</a></td>
                 </tr> 
                 <tr>
-                    <td>08:30-09:50</td>
                     <td>КІ</td>
                     <td>Надійність, діагностика та експлуатація комп’ютерних систем_ Савостін-Косяк Данило Олександрович </td>
                     <td><a href="https://us05web.zoom.us/j/8292861261?pwd=LzVHYkRiN1lwYWhnUENYSHFiSjMvQT09" target="_blank">Натисніть</a></td>
                   </tr> 
                 <tr>
                   <td rowspan="2">2</td>
-                  <td>10:00-11:20</td>
+                  <td rowspan="2">10:00-11:20</td>
                   <td>ПІ-Д, ПІ-К(?)</td>
                   <td>Web-програмування_ Богун Роман Ігорович (лекція) </td>
                   <td><a href="https://us05web.zoom.us/j/82300837007?pwd=d04tZx1cMCFqI6b9C81tVcaxlTpfkH.1" target="_blank">Натисніть</a></td>
                 </tr>
                 <tr>
-                    <td>10:00-11:20</td>
                     <td>КІ</td>
                     <td>Бази даних_ Міронов Юрій Глібович (лекція) </td>
                     <td><a href="https://us04web.zoom.us/j/71522784486?pwd=kQjPqW50YzQYTzBP16mAhVYqW1MvsH.1" target="_blank">Натисніть</a></td>
