--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 <tr>
                   <td>2</td>
                   <td>10:00-11:20</td>
-                  <td>Архітектура комп'ютерів (практ)</td>
+                  <td>Архітектура комп'ютерів (лекція)</td>
                   <td><a href="https://us04web.zoom.us/j/8246476831?pwd=UHJUU3ZDU1lhNmhSRjN2dFJjU3dYUT09"target="_blank">Натисніть</a></td>
                 </tr>
                 <tr>
