--- a/perekladachka.html
+++ b/perekladachka.html
@@ -20,8 +20,8 @@
         </nav>
     </header>
     <div class="rozklad">
+      <h3>Понеділок</h3>
         <table>
-            <h3>Понеділок</h3>
             <thead>
               <tr>
                 <th>№</th>
@@ -75,8 +75,8 @@
               </tr> 
             </table>
             <!-------------------------------------->
+            <h3>Вівторок</h3>
             <table>
-              <h3>Вівторок</h3>
                 <thead>
                   <tr>
                     <th>№</th>
@@ -97,7 +97,7 @@
                   <td>2</td>
                   <td>10:00-11:20</td>
                   <td>ПІ-Д</td>
-                  <td style="color:red;">Архітектура комп’ютерів_  Зубко Роман Анатолійович (лекція)</td>
+                  <td class="red">Архітектура комп’ютерів_  Зубко Роман Анатолійович (лекція)</td>
                   <td><a href="https://us04web.zoom.us/j/8246476831?pwd=UHJUU3ZDU1lhNmhSRjN2dFJjU3dYUT09"target="_blank">Натисніть</a></td>
                 </tr>
                 <tr>
@@ -130,8 +130,8 @@
                   </tr> 
                 </table>
                 <!-------------------------------------->
+               <h3>Середа</h3> 
             <table>
-              <h3>Середа</h3>
                 <thead>
                   <tr>
                     <th>№</th>
@@ -190,8 +190,8 @@
                   </tr> 
                 </table>
                 <!-------------------------------------->
-            <table>
               <h3>Четвер</h3>
+            <table>
                 <thead>
                   <tr>
                     <th>№</th>
@@ -245,8 +245,8 @@
                   </tr> 
                 </table>
                 <!-------------------------------------->
+                <h3>П'ятниця</h3>
             <table>
-              <h3>П'ятниця</h3>
                 <thead>
                   <tr>
                     <th>№</th>
@@ -259,7 +259,7 @@
                 <tr>
                   <td rowspan="2">1</td>
                   <td rowspan="2">08:30-09:50</td>
-                  <td>ПІ-Д, ПІ-К(?)</td>
+                  <td>ПІ-Д</td>
                   <td>Бази даних_ Міронов Юрій Глібович (лекція)</td>
                   <td><a href="https://us04web.zoom.us/j/71522784486?pwd=kQjPqW50YzQYTzBP16mAhVYqW1MvsH.1" target="_blank">Натисніть</a></td>
                 </tr> 
@@ -272,11 +272,11 @@
                   <td rowspan="2">2</td>
                   <td rowspan="2">10:00-11:20</td>
                   <td>ПІ-Д, ПІ-К(?)</td>
-                  <td>Web-програмування_ Богун Роман Ігорович (лекція) </td>
+                  <td class="red">Web-програмування_ Богун Роман Ігорович (лекція) </td>
                   <td><a href="https://us05web.zoom.us/j/82300837007?pwd=d04tZx1cMCFqI6b9C81tVcaxlTpfkH.1" target="_blank">Натисніть</a></td>
                 </tr>
                 <tr>
-                    <td>КІ</td>
+                    <td>КІ, ПІ-К</td>
                     <td>Бази даних_ Міронов Юрій Глібович (лекція) </td>
                     <td><a href="https://us04web.zoom.us/j/71522784486?pwd=kQjPqW50YzQYTzBP16mAhVYqW1MvsH.1" target="_blank">Натисніть</a></td>
                   </tr>
@@ -309,7 +309,7 @@
                     <td></td>
                   </tr> 
                 </table>
+      <h4><i>Розклад було оновлено 6 вересня о 09:30</i></h4>
     </div>
 </body>
 </html>
-
