--- a/ki-21-1fmb.html
+++ b/ki-21-1fmb.html
@@ -20,13 +20,13 @@
         </nav>
     </header>
     <div class="rozklad">
+        <h3>Понеділок</h3>
         <table>
-            <caption>Розклад занять КІ-21-1фмб</caption>
             <thead>
               <tr>
                 <th>№</th>
                 <th>Час</th>
-                <th>Понеділок</th>
+                <th>Дисципліна</th>
                 <th>Zoom</th>
               </tr>
             </thead>
@@ -52,31 +52,36 @@
               <td>4</td>
               <td>13:10-14:30</td>
               <td></td>
+              <td></td>
             </tr> 
             <tr>
               <td>5</td>
               <td>14:40-16:10</td>
+              <td></td>
               <td></td>
             </tr> 
             <tr>
                 <td>6</td>
                 <td>16:10-17:30</td>
                 <td></td>
+                <td></td>
               </tr> 
             </table>
             <!-------------------------------------->
+            <h3>Вівторок</h3>
             <table>
                 <thead>
                   <tr>
                     <th>№</th>
                     <th>Час</th>
-                    <th>Вівторок</th>
+                    <th>Дисципліна</th>
                     <th>Zoom</th>
                   </tr>
                 </thead>
                 <tr>
                   <td>1</td>
                   <td>08:30-09:50</td>
+                  <td></td>
                   <td></td>
                 </tr> 
                 <tr>
@@ -89,30 +94,35 @@
                   <td>3</td>
                   <td>11:40-13:00</td>
                   <td></td>
+                  <td></td>
                 </tr> 
                 <tr>
                   <td>4</td>
                   <td>13:10-14:30</td>
+                  <td></td>
                   <td></td>
                 </tr> 
                 <tr>
                   <td>5</td>
                   <td>14:40-16:10</td>
                   <td></td>
+                  <td></td>
                 </tr> 
                 <tr>
                     <td>6</td>
                     <td>16:10-17:30</td>
                     <td></td>
+                    <td></td>
                   </tr> 
                 </table>
                 <!-------------------------------------->
+                <h3>Середа</h3>
             <table>
                 <thead>
                   <tr>
                     <th>№</th>
                     <th>Час</th>
-                    <th>Середа</th>
+                    <th>Дисципліна</th>
                     <th>Zoom</th>
                   </tr>
                 </thead>
@@ -132,10 +142,12 @@
                   <td>3</td>
                   <td>11:40-13:00</td>
                   <td></td>
+                  <td></td>
                 </tr> 
                 <tr>
                   <td>4</td>
                   <td>13:10-14:30</td>
+                  <td></td>
                   <td></td>
                 </tr> 
                 <tr>
@@ -148,15 +160,17 @@
                     <td>6</td>
                     <td>16:10-17:30</td>
                     <td></td>
+                    <td></td>
                   </tr> 
                 </table>
                 <!-------------------------------------->
+                <h3>Четвер</h3>
             <table>
                 <thead>
                   <tr>
                     <th>№</th>
                     <th>Час</th>
-                    <th>Четвер</th>
+                    <th>Дисципліна</th>
                     <th>Zoom</th>
                   </tr>
                 </thead>
@@ -164,15 +178,18 @@
                   <td>1</td>
                   <td>08:30-09:50</td>
                   <td></td>
+                  <td></td>
                 </tr> 
                 <tr>
                   <td>2</td>
                   <td>10:00-11:20</td>
                   <td></td>
+                  <td></td>
                 </tr>
                 <tr>
                   <td>3</td>
                   <td>11:40-13:00</td>
+                  <td></td>
                   <td></td>
                 </tr> 
                 <tr>
@@ -185,20 +202,23 @@
                   <td>5</td>
                   <td>14:40-16:10</td>
                   <td></td>
+                  <td></td>
                 </tr> 
                 <tr>
                     <td>6</td>
                     <td>16:10-17:30</td>
                     <td></td>
+                    <td></td>
                   </tr> 
                 </table>
                 <!-------------------------------------->
-            <table>
+                <h3>П'ятниця</h3>
+              <table>
                 <thead>
                   <tr>
                     <th>№</th>
                     <th>Час</th>
-                    <th>П'ятниця</th>
+                    <th>Дисципліна</th>
                     <th>Zoom</th>
                   </tr>
                 </thead>
@@ -218,10 +238,12 @@
                   <td>3</td>
                   <td>11:40-13:00</td>
                   <td></td>
+                  <td></td>
                 </tr> 
                 <tr>
                   <td>4</td>
                   <td>13:10-14:30</td>
+                  <td></td>
                   <td></td>
                 </tr> 
                 <tr>
@@ -233,8 +255,10 @@
                     <td>6</td>
                     <td>16:10-17:30</td>
                     <td></td>
+                    <td></td>
                   </tr> 
                 </table>
+      <h4><i>Розклад було оновлено 3 вересня о 23:00</i></h4>
     </div>
 </body>
 </html>
