--- a/index.html
+++ b/index.html
@@ -20,13 +20,13 @@
         </nav>
     </header>
     <div class="rozklad">
+      <h3>Понеділок</h3>
         <table>
-            <caption>Розклад занять ПІ-22-1-ict</caption>
             <thead>
               <tr>
                 <th>№</th>
                 <th>Час</th>
-                <th>Понеділок</th>
+                <th>Дисципліна</th>
                 <th>Zoom</th>
               </tr>
             </thead>
@@ -68,12 +68,13 @@
               </tr> 
             </table>
             <!-------------------------------------->
+            <h3>Вівторок</h3>
             <table>
                 <thead>
                   <tr>
                     <th>№</th>
                     <th>Час</th>
-                    <th>Вівторок</th>
+                    <th>Дисципліна</th>
                     <th>Zoom</th>
                   </tr>
                 </thead>
@@ -115,12 +116,13 @@
                   </tr> 
                 </table>
                 <!-------------------------------------->
+                <h3>Середа</h3>
             <table>
                 <thead>
                   <tr>
                     <th>№</th>
                     <th>Час</th>
-                    <th>Середа</th>
+                    <th>Дисципліна</th>
                     <th>Zoom</th>
                   </tr>
                 </thead>
@@ -162,12 +164,13 @@
                   </tr> 
                 </table>
                 <!-------------------------------------->
+                <h3>Четвер</h3>
             <table>
                 <thead>
                   <tr>
                     <th>№</th>
                     <th>Час</th>
-                    <th>Четвер</th>
+                    <th>Дисципліна</th>
                     <th>Zoom</th>
                   </tr>
                 </thead>
@@ -209,12 +212,13 @@
                   </tr> 
                 </table>
                 <!-------------------------------------->
+                <h3>П'ятниця</h3>
             <table>
                 <thead>
                   <tr>
                     <th>№</th>
                     <th>Час</th>
-                    <th>П'ятниця</th>
+                    <th>Дисципліна</th>
                     <th>Zoom</th>
                   </tr>
                 </thead>
@@ -255,6 +259,7 @@
                     <td></td>
                   </tr> 
                 </table>
+      <h4><i>Розклад було оновлено 1 вересня о 20:00</i></h4>
     </div>
 </body>
 </html>
