--- a/perekladachka.html
+++ b/perekladachka.html
@@ -272,7 +272,7 @@
                   <td rowspan="2">2</td>
                   <td rowspan="2">10:00-11:20</td>
                   <td>ПІ-Д, ПІ-К(?)</td>
-                  <td class="red">Web-програмування_ Богун Роман Ігорович (лекція) </td>
+                  <td>Web-програмування_ Богун Роман Ігорович (лекція) </td>
                   <td><a href="https://us05web.zoom.us/j/82300837007?pwd=d04tZx1cMCFqI6b9C81tVcaxlTpfkH.1" target="_blank">Натисніть</a></td>
                 </tr>
                 <tr>
