--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div class="h1">
-            <h1>Розклад занять ПІ-22-1-ict</h1>
+            <h1>Розклад занять ПІ-22-1-ict (1тиж)</h1>
         </div>
         <nav>
             <ul>
@@ -19,7 +19,10 @@
             </ul>
         </nav>
     </header>
+      
     <div class="rozklad">
+      <a href="index.html" style="background-color: green; border: 1px solid black; text-decoration: none; color: black;">1-ий тиждень</a>
+      <a href="indexyellow.html" style="background-color: yellow; border: 1px solid black; text-decoration: none; color: black;">2-ий тиждень</a>
       <h3>Понеділок</h3>
         <table>
             <thead>
@@ -39,20 +42,20 @@
             <tr>
               <td>2</td>
               <td>10:00-11:20</td>
-              <td></td>
-              <td></td>
+              <td>Філософія (лекція) </td>
+              <td><a href="https://us02web.zoom.us/j/89604024498?pwd=zdTtYUQcK9BMfbBclS2rKxhYqhlDcb.1" target="_blank">Натисніть</a></td>
             </tr>
             <tr>
               <td>3</td>
               <td>11:40-13:00</td>
-              <td></td>
-              <td></td>
+              <td>Архітектура комп'ютерів (лекція)</td>
+                  <td><a href="https://us04web.zoom.us/j/8246476831?pwd=UHJUU3ZDU1lhNmhSRjN2dFJjU3dYUT09"target="_blank">Натисніть</a></td>
             </tr> 
             <tr>
               <td>4</td>
               <td>13:10-14:30</td>
-              <td></td>
-              <td></td>
+              <td>Архітектура комп'ютерів (практична)</td>
+                  <td><a href="https://us04web.zoom.us/j/8246476831?pwd=UHJUU3ZDU1lhNmhSRjN2dFJjU3dYUT09"target="_blank">Натисніть</a></td>
             </tr> 
             <tr>
               <td>5</td>
@@ -87,14 +90,14 @@
                 <tr>
                   <td>2</td>
                   <td>10:00-11:20</td>
-                  <td>Архітектура комп'ютерів (лекція)</td>
-                  <td><a href="https://us04web.zoom.us/j/8246476831?pwd=UHJUU3ZDU1lhNmhSRjN2dFJjU3dYUT09"target="_blank">Натисніть</a></td>
+                  <td>Операційні системи (лекція)</td>
+                  <td><a href="https://us04web.zoom.us/j/77295015229?pwd=JwS6dh4GgbMAcHpHfjabaDvVJstENc.1https://us04web.zoom.us/j/77295015229?pwd=JwS6dh4GgbMAcHpHfjabaDvVJstENc.1">Натисніть</a> <h4 style="color: black;">Код доступу 7hVd4j</h4></td>
                 </tr>
                 <tr>
                   <td>3</td>
                   <td>11:40-13:00</td>
-                  <td></td>
-                  <td></td>
+                  <td>Операційні системи (практична)  </td>
+                  <td><a href="https://us05web.zoom.us/j/88623937900?pwd=VmM2UmFwK0NrNEp0ZUhmSzhPM0RzUT09">Натисніть</a></td>
                 </tr> 
                 <tr>
                   <td>4</td>
@@ -129,8 +132,8 @@
                 <tr>
                   <td>1</td>
                   <td>08:30-09:50</td>
-                  <td>Філософія (лекція)</td>
-                  <td><a href="https://us02web.zoom.us/j/6968348272?pwd=cTJKMElWUXRtd0dkcUVPenIwTVc0dz09&omn=81411586208" target="_blank">Натисніть</a></td>
+                  <td></td>
+                  <td></td>
                 </tr> 
                 <tr>
                   <td>2</td>
@@ -153,8 +156,8 @@
                 <tr>
                   <td>5</td>
                   <td>14:40-16:10</td>
-                  <td></td>
-                  <td></td>
+                  <td>Іноземна мова за професійним спрямуванням (практична)</td>
+                  <td><a href="https://us05web.zoom.us/j/87695261383?pwd=QaNbjMDteeSKfTgjkn9oanJATNdqax.1">Натисніть</a></td>
                 </tr> 
                 <tr>
                     <td>6</td>
@@ -195,8 +198,8 @@
                 <tr>
                   <td>4</td>
                   <td>13:10-14:30</td>
-                  <td>Операційні системи (лекція)</td>
-                  <td><a href="">Натисніть???</a></td>
+                  <td></td>
+                  <td></td>
                 </tr> 
                 <tr>
                   <td>5</td>
@@ -231,8 +234,8 @@
                 <tr>
                   <td>2</td>
                   <td>10:00-11:20</td>
-                  <td>Web-програмування (лекція) </td>
-                  <td><a href="https://us05web.zoom.us/j/82300837007?pwd=d04tZx1cMCFqI6b9C81tVcaxlTpfkH.1" target="_blank">Натисніть</a></td>
+                  <td>Бази даних (лекція)</td>
+                  <td><a href="https://us04web.zoom.us/j/71522784486?pwd=kQjPqW50YzQYTzBP16mAhVYqW1MvsH.1" target="_blank">Натисніть</a></td>
                 </tr>
                 <tr>
                   <td>3</td>
@@ -258,8 +261,59 @@
                     <td></td>
                     <td></td>
                   </tr> 
+                  <!-------------------------------------->
+                <h3>Субота</h3>
+                <table>
+                    <thead>
+                      <tr>
+                        <th>№</th>
+                        <th>Час</th>
+                        <th>Дисципліна</th>
+                        <th>Zoom</th>
+                      </tr>
+                    </thead>
+                    <tr>
+                      <td>1</td>
+                      <td>08:30-09:50</td>
+                      <td></td>
+                      <td></td>
+                    </tr> 
+                    <tr>
+                      <td>2</td>
+                      <td>10:00-11:20</td>
+                      <td></td>
+                      <td></td>
+                    </tr>
+                    <tr>
+                      <td>3</td>
+                      <td>11:40-13:00</td>
+                      <td></td>
+                      <td></td>
+                    </tr> 
+                    <tr>
+                      <td>4</td>
+                      <td>13:10-14:30</td>
+                      <td>Філософія (практична) </td>
+                      <td><a href="">Натисніть???</a></td>
+                    </tr> 
+                    <tr>
+                      <td>5</td>
+                      <td>14:40-16:10</td>
+                      <td></td>
+                      <td></td>
+                    </tr> 
+                    <tr>
+                        <td>6</td>
+                        <td>16:10-17:30</td>
+                        <td></td>
+                        <td></td>
+                      </tr> 
+                    </table>
                 </table>
       <h4><i>Розклад було оновлено 1 вересня о 20:00</i></h4>
     </div>
 </body>
 </html>
+<!--<td>Web-програмування (лекція) </td>
+    <td><a href="https://us05web.zoom.us/j/82300837007?pwd=d04tZx1cMCFqI6b9C81tVcaxlTpfkH.1" target="_blank">Натисніть</a></td>-->
+<!---->
